--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/progress-view": "^1.3.1",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
@@ -18,6 +19,8 @@
     "react": "17.0.1",
     "react-dom": "^17.0.2",
     "react-native": "0.64.3",
+    "react-native-bootsplash": "^4.0.2",
+    "react-native-bouncy-checkbox": "^2.1.7",
     "react-native-drawer": "^2.5.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.4.2",
@@ -26,6 +29,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "12.1.1",
     "react-native-table-component": "^1.2.1",
     "react-native-tableview": "^3.1.0",
