--- a/app.json
+++ b/app.json
@@ -2,14 +2,18 @@
   "expo": {
     "name": "quizApp",
     "slug": "quizApp",
+    "icon": "./assets/icon.png",
     "version": "1.0.0",
     "splash": {
       "image": "./assets/splash.png"
     },
-    
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    
+    "ios": {
+      "bundleIdentifier": "app"
+    }
   },
   "name": "quizApp"
 }
